--- a/src/shared/frames/css/context.css
+++ b/src/shared/frames/css/context.css
@@ -324,12 +324,11 @@ ul {
 
 .gpii-context-time-whole-div {
     margin-left: 0.4em;
-    display: none;
 }
 
 .gpii-context-times-new-record {
-    margin-top: 1em;	
-    display: none;
+    margin-top: 1em;
+    /*display: none;*/
 }
 
 .gpii-context-times-new-record-label {
@@ -344,7 +343,7 @@ ul {
     border-bottom: 3px solid #62caca;
     margin-left: 6.4em;
     width : 26.5em;	
-    display: none;
+    /*display: none;*/
 }
 
 input[type='number'] {
@@ -367,8 +366,8 @@ input[type=number]::-webkit-outer-spin-button {
 
 .gpii-context-times-notapplied {
     color: #474D71;
-    margin-left: 7em;
-    margin-top: 0.188em;
+    margin-left: 1em;
+    margin-top: 0.6em;
     font-style: normal;
     font-weight: bold;
     font-size: 1em;
@@ -379,8 +378,8 @@ input[type=number]::-webkit-outer-spin-button {
     width: 10px; 
     border-top: 5px solid #F2F2F2;
     display: inline;
-    margin-top: -1.8em;
-    margin-left: 6.5em;
+    margin-top: -1.6em;
+    margin-left: 0em;
 }
 
 .gpii-context-times-new-record-fontIcon-pencil:before {
@@ -398,8 +397,8 @@ input[type=number]::-webkit-outer-spin-button {
     width: 10px; 
     border-top: 5px solid #F2F2F2;
     display: inline;
-    margin-top: -1.8em;
-    margin-left: 25.5em;
+    margin-top: -1.5em;
+    margin-left: 0em;
 }
 
 .gpii-context-times-new-record-fontIcon-delete:before {
@@ -525,14 +524,14 @@ input[type=number]::-webkit-outer-spin-button {
 .gpii-context-overlay {
     position: fixed;
     top: 0;
-    width: 65em;
+    width: 67.5em;
     height: 100%;
     background-color: #0AA;
     opacity: 0.5;
     z-index: 10;
     margin: 0em auto;
     border-radius: 0.4em;
-    left: 24em;
+    left: 21.5em;
 }
 
 .gpii-context-modal {
@@ -548,4 +547,32 @@ input[type=number]::-webkit-outer-spin-button {
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
     z-index: 11;
     line-height: 1em;
+}
+
+.gpii-context-edit-time-button {
+    font-weight: bold;
+    font-family: Verdana;
+    font-size: 0.8em;
+    background-color: inherit;
+    color: #474C66;
+    border: 0em none;
+    margin: -1.3em 0em 0.2em 9em;
+    padding: 0em;
+    float: left;
+    cursor: pointer;
+    display: inline-block;
+}
+
+.gpii-context-delete-time-button {
+    font-weight: bold;
+    font-family: Verdana;
+    font-size: 0.8em;
+    background-color: inherit;
+    color: #474C66;
+    border: 0em none;
+    margin: -1.3em 0em 0.2em 8.5em;
+    padding: 0em;
+    float: left;
+    cursor: pointer;
+    display: inline-block;
 }
