--- a/src/shared/frames/css/frames.css
+++ b/src/shared/frames/css/frames.css
@@ -128,6 +128,7 @@ body {
     font-style:italic;
     vertical-align: middle;
     font-size: 1.2em;
+    background-color: #CED7D9;
 }
 
 .gpii-pmt-saveButtonContainer {
