--- a/src/shared/frames/css/context.css
+++ b/src/shared/frames/css/context.css
@@ -12,7 +12,7 @@ ul {
     background-color: #F2F2F2;
     font-family: "Roboto Slab",serif;
     width: 45em;
-    height: 55em;
+    height: 43em;
 }
 
 .gpii-context-header-tabs {
@@ -524,21 +524,20 @@ input[type=number]::-webkit-outer-spin-button {
 .gpii-context-overlay {
     position: fixed;
     top: 0;
-    width: 67.5em;
+    width: 100%;
     height: 100%;
     background-color: #0AA;
     opacity: 0.5;
     z-index: 10;
     margin: 0em auto;
     border-radius: 0.4em;
-    left: 21.5em;
+    left: 0em;
 }
 
 .gpii-context-modal {
     position: fixed;
     width: 45em;
-    height: 55em;
-    left: 34em;
+    height: 43em;
     top: 1em;
     margin-top: 0px;
     margin-left: 0px;
