--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -72,7 +72,7 @@ h2 {
 }
 
 h2 > label {
-    padding-top: 10px;
+    padding-top: 2px;
 }
 
 /*
@@ -135,6 +135,14 @@ input[type=checkbox]:checked + .gpii-prefsEditor-headerImage > .gpii-prefsEditor
 
 .gpii-prefsEditor-contrastPanel .gpii-prefsEditor-headerImage:before {
     content: "\e60e";
+}
+
+.gpii-prefsEditor-autoAdjustPanel > .gpii-prefsEditor-headerImage:before {
+    content: "\e600";
+}
+
+.gpii-prefsEditor-autoAdjustPanel .gpii-prefsEditor-headerImage:before {
+    content: "\e600";
 }
 
 .gpii-prefsEditor-headerTitle-withoutIcon {
