--- a/src/shared/adjusters/css/adjusters.css
+++ b/src/shared/adjusters/css/adjusters.css
@@ -1826,7 +1826,7 @@ h3.gpii-speakText-label {
     background-color: #E5EDED;
     margin: 0.5em;
 }
-
+/*
 .gpii-prefsEditor-contextFrame-setLabel {
     font-family: Courier New !important;
     font-size: 1.8em;
@@ -1842,6 +1842,28 @@ h3.gpii-speakText-label {
     top: 3.5em;
     font-family: Verdana !important;
     padding-left: 1.3em;
+}
+*/
+
+.gpii-prefsEditor-contextFrame-setLabel {
+    font-family: Courier New !important;
+    font-size: 1.8em;
+    position: relative;
+    color: #000;
+    padding-top: 0em;
+    padding-left: 0.5em;
+    top: 0.2em;
+}
+
+.gpii-prefsEditor-contextFrame-setLabelDescription {
+    font-size: 0.8em;
+    position: relative;
+    font-family: Verdana !important;
+    float: left;
+    padding-left: 1.5em;
+    top: 0.2em;
+    margin: 0em;
+    width: 25em;
 }
 
 .gpii-prefsEditor-context-addIcon, .gpii-prefsEditor-context-addIconMouseOver {
@@ -1873,11 +1895,20 @@ h3.gpii-speakText-label {
 .gpii-prefsEditor-context-addIcon:before, .gpii-prefsEditor-context-addIconMouseOver:before {
     content: "\e65e";
 }
-
+/*
 .gpii-prefsEditor-context-leftArrowIcon {
     display: table;
     width: 115%;
     height: 3em;
+}
+*/
+.gpii-prefsEditor-context-leftArrowIcon {
+    width: 15%;
+    float: right;
+    margin-right: -3em;
+    line-height: 3.5em;
+    display: block;
+    height: 2em;
 }
 
 .gpii-prefsEditor-context-leftArrowIcon:before {
@@ -1903,7 +1934,7 @@ h3.gpii-speakText-label {
 .gpii-prefsEditor-pencil-icon:before {
     font-size: 1.2em;
     font-weight: normal;
-    background-color: #FFDA00;
+    /*background-color: #FFDA00;*/
     color: #474C66;
     vertical-align: middle;
     display: inline-block;
@@ -1911,10 +1942,14 @@ h3.gpii-speakText-label {
     margin-right: 0.6em;
 }
 
+.gpii-prefsEditor-pencil-yellow-bg {
+    background-color: #FFDA00;
+}
+
 .gpii-prefsEditor-pencil-icon:before {
     content: "\e644";
 }
-
+/*
 .gpii-prefsEditor-context-edit-button {
     font-weight: bold;
     font-family: Verdana;
@@ -1930,6 +1965,21 @@ h3.gpii-speakText-label {
     float: right;
     cursor: pointer;
     display: inline-block;
+}
+*/
+
+.gpii-prefsEditor-context-edit-button {
+    font-weight: bold;
+    font-family: Verdana;
+    font-size: 0.8em;
+    background-color: inherit;
+    color: #474C66;
+    border: 0em none;
+    float: right;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0em 3em 0.2em 0em;
+    padding: 1em 0em 0em;
 }
 
 .gpii-prefsEditor-quickEditorLink {
