--- a/src/shared/frames/css/context.css
+++ b/src/shared/frames/css/context.css
@@ -647,3 +647,7 @@ input[type=number]::-webkit-outer-spin-button {
     border: 0em;
     cursor: pointer;
 }
+
+.gpii-context-span-cursor {
+    cursor: pointer;
+}
