GPII-1148: Time text box with two digits (e.g. 01:05). Alert in case of wrong format. We also fixed the edit and delete buttons (work also with SPACE and ENTER key). Translations for Spanish, German and Greek.

--- a/src/shared/frames/css/context.css
+++ b/src/shared/frames/css/context.css
@@ -322,17 +322,6 @@ ul {
     text-align: center;
 }
 
-.gpii-context-time2 {
-    color: #474D71;
-    margin-top: 0.188em;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 0.95em;
-    width: 4em;
-    border: 0 none;
-    text-align: center;
-}
-
 .gpii-context-time-whole-div {
     margin-left: 0.4em;
 }
@@ -367,16 +356,6 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
-input[type='time'] {
-    -moz-appearance:textfield;
-}
-
-input[type=time]::-webkit-inner-spin-button, 
-input[type=time]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
-}
-
 .gpii-context-time-to-label {
     color: #474d71;
     font-size: 0.95em;
@@ -392,6 +371,12 @@ input[type=time]::-webkit-outer-spin-button {
     font-style: normal;
     font-weight: bold;
     font-size: 1em;
+}
+
+.gpii-context-time-invalid {
+    color: red;
+    border: 2px;
+    border-color: red;
 }
 
 .gpii-context-times-new-record-fontIcon-pencil {
