--- a/src/shared/frames/css/context.css
+++ b/src/shared/frames/css/context.css
@@ -13,6 +13,7 @@ ul {
     font-family: "Roboto Slab",serif;
     width: 45em;
     height: 100%;
+    overflow: scroll;
 }
 
 .gpii-context-header-tabs {
@@ -206,7 +207,7 @@ ul {
     font-weight: bold;
 }
 
-.gpii-context-devices-add-new, .gpii-context-noise-add-new {
+.gpii-context-devices-add-new, .gpii-context-noise-add-new, .gpii-context-brightness-add-new {
     display: block;
     border: 3px solid #62CACA;
     width: 32em;
@@ -228,7 +229,7 @@ ul {
     line-height: 1.4em;
 }
 
-.gpii-context-devices-list-items, .gpii-context-noise-list-items {
+.gpii-context-devices-list-items, .gpii-context-noise-list-items, .gpii-context-brightness-list-items {
     color: #6F6A56;
     font-weight: normal;
     font-size: 0.8em;
@@ -238,7 +239,7 @@ ul {
     font-size: 1em;
 }
 
-.gpii-select-device-labels, .gpii-select-noise-labels {
+.gpii-select-device-labels, .gpii-select-noise-labels , .gpii-select-brightness-labels {
     padding-left: 1em;
     border-left-color: #62caca;
     border-left-style: solid;
@@ -247,7 +248,7 @@ ul {
     color: #474d71;
 }
 
-.gpii-select-device-labels-all, .gpii-select-noise-labels-any {
+.gpii-select-device-labels-all, .gpii-select-noise-labels-any, .gpii-select-brightness-labels-any {
     border-bottom-style: dashed;
 }
 
@@ -265,7 +266,7 @@ ul {
     width: 15em;
 }
 
-.gpii-context-devices-notapplied, .gpii-context-any-noise {
+.gpii-context-devices-notapplied, .gpii-context-any-noise, .gpii-context-any-brightness {
     color: #474D71;
     margin-left: 7em;
     margin-top: 0.188em;
@@ -279,7 +280,7 @@ ul {
 }
 
 
-.gpii-context-header-time, .gpii-context-header-noise {
+.gpii-context-header-time, .gpii-context-header-noise, .gpii-context-header-brightness {
     font-family: "Open Sans",sans-serif;
     font-size: 1em;
     display: inline-block;
@@ -308,7 +309,7 @@ ul {
     content: "\e66d";
 }
 
-.gpii-context-header-time-label, .gpii-context-header-noise-label {
+.gpii-context-header-time-label, .gpii-context-header-noise-label, .gpii-context-header-brightness-label {
     padding-top: 0.8em;
     display: inline-block;
     font-size: 1.2em;
